--- a/Romanian/main/Browser.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Browser.apk/res/values-ro/strings.xml
@@ -228,16 +228,6 @@ Paginile pe care le accesați nu vor fi stocate în istoricul de navigare​"</s
     <string name="dialog_queued_body">Acest fișier se află în lista pentru descărcări ulterioare.</string>
     <string name="dialog_title_not_available">"Nu s-a putut descărca"</string>
     <string name="dialog_title_queued_body">Fișierul nu este disponibil încă</string>
-    <string name="document_download_background_btn">Descărcare în fundal</string>
-    <string name="document_download_cancel_btn">Renunțați</string>
-    <string name="document_download_failed">Descărcarea a eșuat</string>
-    <string name="document_download_official">Descărcare oficială</string>
-    <string name="document_download_open_direct">Deschideți direct</string>
-    <string name="document_download_title">Descărcare</string>
-    <string name="document_open_file">Deschideți %s</string>
-    <string name="document_open_message">Pentru a îmbunătăți experiența de citire și a vă asigura securitatea, vă recomandăm să utilizați aplicația personalizată oficială WPS</string>
-    <string name="document_open_other">Alte aplicații</string>
-    <string name="document_open_title">Deschideți cu</string>
     <string name="dont_remind_again">Se memorează această alegere</string>
     <string name="download_btn_select_all">Selectați tot</string>
     <string name="download_btn_select_none">Deselectați tot</string>
@@ -251,14 +241,12 @@ Paginile pe care le accesați nu vor fi stocate în istoricul de navigare​"</s
     <string name="download_dialog_file_length_nolength_txt">Doar o secundă…</string>
     <string name="download_failed">"Nu s-a putut descărca"</string>
     <string name="download_filter_all">Toate</string>
-    <string name="download_filter_apk">Apk</string>
     <string name="download_filter_application">Aplicații</string>
     <string name="download_filter_audio">Muzică</string>
     <string name="download_filter_image">Fotografii</string>
     <string name="download_filter_others">Altele</string>
     <string name="download_filter_text">Fișiere</string>
     <string name="download_filter_video">Videoclipuri</string>
-    <string name="download_filter_zip">Zip</string>
     <string name="download_in_process">Descărcare…</string>
     <string name="download_list_open_xl_ok">OK</string>
     <string name="download_memory_info_avai">" disponibil %s|"</string>
@@ -294,8 +282,8 @@ Paginile pe care le accesați nu vor fi stocate în istoricul de navigare​"</s
     <string name="error_title">Nu se poate sincroniza</string>
     <string name="error_unauthorized">Sincronizarea cu contul dvs. Mi a fost dezactivată din cauza prea multor încercări de conectare.</string>
     <string name="exit_browser_warning">Ieşiţi din browser acum?</string>
-    <string name="file_dir">Modificați directorul</string>
-    <string name="file_name">"Nume : "</string>
+    <string name="file_dir">Director</string>
+    <string name="file_name">Nume</string>
     <string name="file_picker">Selectaţi calea</string>
     <string name="filename_empty_alert_message">Introduceţi numele fișierului :)</string>
     <string name="filename_illegal_alert_message">Un caracter interzis a fost eliminat din numele fișierului</string>
@@ -460,7 +448,6 @@ Părăsiţi această pagină?"</string>
     <string name="network_show_wifi_setting_tip_dialog_title">Conexiune Wi-Fi deschisă disponibilă</string>
     <string name="new_folder_name_lable">Nume grup</string>
     <string name="next_button_label">Înainte</string>
-    <string name="no_app_open_document">Nu a fost găsită nicio aplicație pentru a finaliza această acțiune</string>
     <string name="no_matches">Nicio potrivire</string>
     <string name="no_space_alert_cancel">Mai târziu</string>
     <string name="no_space_alert_clean">Obțineți spațiu suplimentar</string>
@@ -638,7 +625,6 @@ Părăsiţi această pagină?"</string>
     <string name="same_folder_name_warning">Un grup cu același nume există deja</string>
     <string name="save_button_text">Salvaţi</string>
     <string name="save_dialog_title">Salvaţi</string>
-    <string name="save_file">Salvați %s fișiere</string>
     <string name="save_file_already_exist_alert_message">Un fișier cu același nume există deja, doriţi să-l înlocuiţi?</string>
     <string name="save_file_already_exist_alert_title">Alertă</string>
     <string name="save_form_data_confirm_message">Oprirea acestei caracteristici poate afecta modul de funcționare al telefonului.</string>
@@ -822,8 +808,7 @@ Părăsiţi această pagină?"</string>
     <string name="video_subtitle_prefix_message">"Vizionate: "</string>
     <string name="video_title_prefix_message">"Off-line: "</string>
     <string name="view_certificate">Vizualizaţi certificatul</string>
-    <string name="view_document_downloaded_files">Vizualizați fișierele descărcate în Managerul de descărcări</string>
-    <string name="voice_sub_title">Nu știţi ce să spuneţi? Încercaţi, deschideți mi.com!</string>
+    <string name="voice_sub_title">Nu știţi ce să spuneţi? Încercaţi, Deschide mi.com!</string>
     <string name="voice_title">Rostiți comanda dvs…</string>
     <string name="voice_title_distinguish">Procesare…</string>
     <string name="voice_title_listening">Ascultare…</string>
