--- a/Romanian/main/CloudService.apk/res/values-ro/strings.xml
+++ b/Romanian/main/CloudService.apk/res/values-ro/strings.xml
@@ -97,7 +97,7 @@ Dacă veţi schimba cartela SIM, un alt SMS va fi trimis automat pentru a reacti
     <string name="find_device_status_ok">Găsiți dispozitivul de oriunde accesând i.mi.com</string>
     <string name="find_device_status_ok_international">Localizați dispozitivul dvs. accesând www.mi.com/micloud</string>
     <string name="find_device_success_title">Localizare dispozitiv</string>
-    <string name="forget_password"><u>Parolă uitată<u></string>
+    <string name="forget_password"><u>Parolă uitată</u></string>
     <string name="free_space_has_received">Ați adăugat deja spațiu liber în această lună</string>
     <string name="free_space_receive_fail">Nu se poate actualiza</string>
     <string name="get_first_month_gb">Obţineţi %s de spațiu gratuit</string>
